--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<version>7.1.11</version>
 			<type>pom</type>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
 
 
 	</dependencies>
